@@ -26,6 +26,7 @@ MBDyn 1.X-Devel
 		- fix output file name ext. issue (noted by Jens van Schelve)
 		- fix totalj rel. rot. priv data (noted by Jens van Schelve)
 		- fix beam default output (noted by Reinhard Resch)
+		- fix linear/angular acceleration joint initialization
 
 MBDyn 1.4.3
 	Enhancements:
